--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
+  table_calendar: ^3.0.2
+
 
 
   # The following adds the Cupertino Icons font to your application.
