--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
     sdk: flutter
     
   table_calendar: ^3.0.2
-
+  sqflite: ^2.0.0+4
+  path_provider: ^2.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
