--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   table_calendar: ^2.3.3
+  sqflite: ^1.0.0
+  path_provider: ^0.4.1
 
 dev_dependencies:
   flutter_test:
