--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   provider:
   shared_preferences:
   url_launcher: ^5.4.7
+  datetime_picker_formfield: ^0.1.8
 
 dev_dependencies:
   flutter_test:
